--- a/style.css
+++ b/style.css
@@ -1,4 +1,14 @@
-body{
+body {
   text-align: center;
   font-family: Verdana;
+}
+
+.choiceButton {
+  width: 30%
+  height: 50px
+  background-color: lightgray;
+  border-style: double;
+  border-width:3px;
+  border-radius: 10px;
+  padding:15px;
 }
