--- a/style.css
+++ b/style.css
@@ -2,7 +2,9 @@ body {
   text-align: center;
   font-family: Verdana;
 }
-
+/*
+You can change the margin if you think the gap between the belivability and question num is too much
+*/
 #progress{
   margin-right: 50px;
 }
@@ -15,5 +17,4 @@ body {
   border-width:3px;
   border-radius: 10px;
   padding:15px;
-  margon-right: 30px;
 }
