--- a/style.css
+++ b/style.css
@@ -4,6 +4,15 @@ body {
   text-align: center;
   font-family: Verdana;
 }
+#wegnerImage{
+  width: 32px;
+  height: 32px;
+  background-image: url('puffs.png'); 
+  background-size: 100% 100%;
+  position: absolute;
+  top: 50px;
+  left: 50px;
+}
 /*
 You can change the margin if you think the gap between the belivability and question num is too much
 */
