--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
 #wegnerImage{
   width: 32px;
   height: 32px;
-  background-image: url('puffs.png'); 
+  background-image: url('wegner.jpg'); 
   background-size: 100% 100%;
   position: absolute;
   top: 50px;
