--- a/style.css
+++ b/style.css
@@ -13,6 +13,15 @@ body {
   bottom: 0px;
   left: 0px;
 }
+#pangeaImage{
+  width: 267px;
+  height: 314px;
+  background-image: url('pangea.png'); 
+  background-size: 100% 100%;
+  position: absolute;
+  bottom: 0px;
+  right: 0px;
+}
 /*
 You can change the margin if you think the gap between the belivability and question num is too much
 */
