--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
   background-color: #f0e6ef;
   
   text-align: center;
-  font-family: "Verdana";
+  font-family: "Verdana", Arial;
 }
 #wegnerImage{
   width: 300px;
