--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body {
   position: absolute;
   bottom: 0px;
   left: 0px;
+  border: 3px solid;
 }
 #pangeaImage{
   width: 267px;
@@ -21,6 +22,7 @@ body {
   position: absolute;
   bottom: 0px;
   right: 0px;
+  border: 3px solid;
 }
 /*
 You can change the margin if you think the gap between the belivability and question num is too much
